# wechat2rss

./: .gitignore  CHANGELOG.md  README.md  package.json  plan.md  pyproject.toml  w2r.py
.github/workflows/: ci.yml
Formula/: w2r.rb
skills/wechat2rss-manager/: SKILL.md
src/w2r/: __init__.py  cli.py
tests/: test_cli.py
