[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "w2r-cli"
version = "0.1.0"
description = "CLI for managing a self-hosted Wechat2RSS service"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Devon" }
]
keywords = ["wechat", "rss", "cli", "wechat2rss"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/devon-kong/wechat2rss"
Repository = "https://github.com/devon-kong/wechat2rss"
Issues = "https://github.com/devon-kong/wechat2rss/issues"

[project.scripts]
w2r = "w2r.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "build>=1.2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/w2r"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
